Criação de rota Register; início redux register;

--- a/angular.json
+++ b/angular.json
@@ -107,5 +107,8 @@
       }
     }
   },
-  "defaultProject": "mediumclone-angular"
+  "defaultProject": "mediumclone-angular",
+  "cli": {
+    "analytics": false
+  }
 }
