redux register e login; novos services e funcionalidades

--- a/angular.json
+++ b/angular.json
@@ -109,6 +109,7 @@
   },
   "defaultProject": "mediumclone-angular",
   "cli": {
-    "analytics": false
+    "analytics": false,
+    "defaultCollection": "@ngrx/schematics"
   }
 }
