--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics": "13.2.0",
     "@angular/animations": "~13.2.0",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
@@ -18,8 +19,11 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
-    "@ngrx/store": "~13.2.0",
-    "@ngrx/store-devtools": "~13.2.0",
+    "@ngrx/effects": "13.2.0",
+    "@ngrx/entity": "13.2.0",
+    "@ngrx/schematics": "13.2.0",
+    "@ngrx/store": "13.2.0",
+    "@ngrx/store-devtools": "13.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
