--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/router": "~13.2.0",
     "@ngrx/effects": "13.2.0",
     "@ngrx/entity": "13.2.0",
+    "@ngrx/router-store": "13.2.0",
     "@ngrx/schematics": "13.2.0",
     "@ngrx/store": "13.2.0",
     "@ngrx/store-devtools": "13.2.0",
+    "query-string": "^8.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
